--- a/Css/style.css
+++ b/Css/style.css
@@ -42,9 +42,7 @@ select,
 textarea,
 input {
   border: none;
-  -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none; }
+  appearance: none; }
 
 select,
 textarea,
@@ -73,7 +71,7 @@ select {
     margin-bottom: 0; }
 
 select {
-  background: url(../images/icon-arrow-dwn.svg);
+  background: url(../Images/icon-arrow-dwn.svg);
   background-color: #EBECEE;
   background-repeat: no-repeat;
   background-position: right 10px center;
@@ -152,11 +150,9 @@ footer.page-footer {
 input:not([type='submit']),
 select,
 textarea {
-  -webkit-transition: border-color 0.3s, background-color 0.3s, color 0.3s, box-shadow 0.3s;
   transition: border-color 0.3s, background-color 0.3s, color 0.3s, box-shadow 0.3s; }
 
 input[type='submit'] {
-  -webkit-transition: background-color 0.3s, color 0.3s;
   transition: background-color 0.3s, color 0.3s; }
 
 /* Checked + focus states */
@@ -208,42 +204,6 @@ textarea:hover {
   color: white;
   border-color: #91979D;
   background-color: #91979D; }
-  input[type='radio']:hover::-webkit-input-placeholder,
-  input[type='checkbox']:hover::-webkit-input-placeholder,
-  input[type='radio']:hover::-webkit-input-placeholder,
-  input[type='checkbox']:hover::-webkit-input-placeholder,
-  select:hover::-webkit-input-placeholder,
-  input[type='number']:hover::-webkit-input-placeholder,
-  input[type='text']:hover::-webkit-input-placeholder,
-  input[type='tel']:hover::-webkit-input-placeholder,
-  input[type='email']:hover::-webkit-input-placeholder,
-  input[type='date']:hover::-webkit-input-placeholder,
-  textarea:hover::-webkit-input-placeholder {
-    color: white; }
-  input[type='radio']:hover::-moz-placeholder,
-  input[type='checkbox']:hover::-moz-placeholder,
-  input[type='radio']:hover::-moz-placeholder,
-  input[type='checkbox']:hover::-moz-placeholder,
-  select:hover::-moz-placeholder,
-  input[type='number']:hover::-moz-placeholder,
-  input[type='text']:hover::-moz-placeholder,
-  input[type='tel']:hover::-moz-placeholder,
-  input[type='email']:hover::-moz-placeholder,
-  input[type='date']:hover::-moz-placeholder,
-  textarea:hover::-moz-placeholder {
-    color: white; }
-  input[type='radio']:hover:-ms-input-placeholder,
-  input[type='checkbox']:hover:-ms-input-placeholder,
-  input[type='radio']:hover:-ms-input-placeholder,
-  input[type='checkbox']:hover:-ms-input-placeholder,
-  select:hover:-ms-input-placeholder,
-  input[type='number']:hover:-ms-input-placeholder,
-  input[type='text']:hover:-ms-input-placeholder,
-  input[type='tel']:hover:-ms-input-placeholder,
-  input[type='email']:hover:-ms-input-placeholder,
-  input[type='date']:hover:-ms-input-placeholder,
-  textarea:hover:-ms-input-placeholder {
-    color: white; }
   input[type='radio']:hover::placeholder,
   input[type='checkbox']:hover::placeholder,
   input[type='radio']:hover::placeholder,
@@ -258,7 +218,7 @@ textarea:hover {
     color: white; }
 
 select:hover {
-  background: url(../images/icon-arrow-dwn-hover.svg);
+  background: url(../Images/icon-arrow-dwn-hover.svg);
   background-color: #91979D;
   background-repeat: no-repeat;
   background-position: right 12px center;
@@ -277,13 +237,13 @@ input[type='radio']:checked {
     box-shadow: inset 0 0 0 3.5px #91979D; }
 
 input[type='checkbox']:checked {
-  background: url(../images/icon-check.svg);
+  background: url(../Images/icon-check.svg);
   background-color: #EBECEE;
   background-repeat: no-repeat;
   background-position: center;
   background-size: 10px; }
   input[type='checkbox']:checked:hover {
-    background: url(../images/icon-check-hover.svg);
+    background: url(../Images/icon-check-hover.svg);
     background-color: #91979D;
     background-repeat: no-repeat;
     background-position: center;
@@ -293,12 +253,6 @@ input[type='checkbox']:checked {
 .required:invalid, .required:out-of-range {
   border-color: red;
   background: #FEDFE0; }
-  .required:invalid::-webkit-input-placeholder, .required:out-of-range::-webkit-input-placeholder {
-    color: red; }
-  .required:invalid::-moz-placeholder, .required:out-of-range::-moz-placeholder {
-    color: red; }
-  .required:invalid:-ms-input-placeholder, .required:out-of-range:-ms-input-placeholder {
-    color: red; }
   .required:invalid::placeholder, .required:out-of-range::placeholder {
     color: red; }
 
@@ -310,7 +264,6 @@ html {
   font-size: 1px;
   /* Background pattern + fallback */
   background: #FDFDFD;
-  background: -webkit-repeating-linear-gradient(315deg, #FDFDFD, #FDFDFD 0.15%, white 0.16%, white 0.3%);
   background: repeating-linear-gradient(135deg, #FDFDFD, #FDFDFD 0.15%, white 0.16%, white 0.3%);
   /* Smoother renderring of fonts */
   apple-font-smoothing: antialiased;
@@ -340,24 +293,6 @@ select,
 option,
 textarea {
   font-family: "Merriweather", serif; }
-
-input::-webkit-input-placeholder {
-  font-size: 12rem;
-  font-weight: 100;
-  font-style: italic;
-  text-align: right; }
-
-input::-moz-placeholder {
-  font-size: 12rem;
-  font-weight: 100;
-  font-style: italic;
-  text-align: right; }
-
-input:-ms-input-placeholder {
-  font-size: 12rem;
-  font-weight: 100;
-  font-style: italic;
-  text-align: right; }
 
 input::placeholder {
   font-size: 12rem;
