--- a/Css/style.css
+++ b/Css/style.css
@@ -32,6 +32,13 @@ legend {
   margin-bottom: 24px;
   display: inline-block;
   width: 100%; }
+  legend:before {
+    content: "";
+    display: block;
+    height: 2px;
+    width: 100%;
+    background-color: #212B34;
+    margin-bottom: 24px; }
 
 label {
   display: inline-block;
@@ -81,7 +88,8 @@ input[type="date"] {
   background-repeat: no-repeat;
   background-position: center;
   background-position: right 12px center;
-  background-size: 16px; }
+  background-size: 16px;
+  vertical-align: bottom; }
   input[type="date"]::-webkit-calendar-picker-indicator {
     color: transparent;
     background-color: transparent;
@@ -152,9 +160,7 @@ form.form-wrapper {
 
 /* Form fieldsets */
 fieldset.form-fieldset {
-  padding-top: 24px;
-  padding-bottom: 32px;
-  border-top: 2px solid #212B34; }
+  padding-bottom: 32px; }
   fieldset.form-fieldset div[id$='-group'] {
     margin-bottom: 16px; }
     fieldset.form-fieldset div[id$='-group']:last-child {
@@ -419,22 +425,22 @@ section.form-intro p {
     font-size: 26px;
     font-weight: 600; }
 
-  fieldset.form-fieldset {
-    padding-top: 48px; }
-    fieldset.form-fieldset:first-child {
-      padding-bottom: 48px; }
-      fieldset.form-fieldset:first-child label {
-        float: left;
-        width: 25%;
-        margin-top: 16px; }
-      fieldset.form-fieldset:first-child input,
-      fieldset.form-fieldset:first-child select {
-        float: left;
-        width: 75%; }
-      fieldset.form-fieldset:first-child:after {
-        display: table;
-        clear: both;
-        content: ''; } }
+  fieldset.form-fieldset legend:before {
+    margin-bottom: 48px; }
+  fieldset.form-fieldset:first-child {
+    padding-bottom: 48px; }
+    fieldset.form-fieldset:first-child label {
+      float: left;
+      width: 25%;
+      margin-top: 16px; }
+    fieldset.form-fieldset:first-child input,
+    fieldset.form-fieldset:first-child select {
+      float: left;
+      width: 75%; }
+    fieldset.form-fieldset:first-child:after {
+      display: table;
+      clear: both;
+      content: ''; } }
 /* Larger devices and up */
 @media screen and (min-width: 1024px) {
   main.container {
